--- a/my-app/src/app/pages/home/setting/setting-content/setting-content.component.html
+++ b/my-app/src/app/pages/home/setting/setting-content/setting-content.component.html
@@ -19,7 +19,7 @@
     <div class="py-4">
       <h4 class="mx-3">Login</h4>
       <div class="container-fluid d-flex justify-content-between">
-        <button mat-button class="text-danger" (click)="signOutClickHandler()">Log Out</button>
+        <button mat-button class="text-danger" (click)="authService.signout()">Log Out</button>
       </div>
     </div>
   </div>
