--- a/my-app/src/app/shared/setting-page/top-header/setting-top-header.component.html
+++ b/my-app/src/app/shared/setting-page/top-header/setting-top-header.component.html
@@ -1,13 +1,11 @@
-<nav class="home-navbar navbar bg-light fixed-top position-sticky py-3" >
-    <div class="container-fluid">
-      <div>
-        <mat-icon (click)="backClicked()">keyboard_arrow_left</mat-icon>
-      </div>
-      <div>
-        <strong>
-            Setting
-        </strong>
-      </div>
-      <br>    
+<nav class="home-navbar navbar bg-light fixed-top position-sticky py-3">
+  <div class="container-fluid">
+    <div>
+      <mat-icon (click)="backClicked()">keyboard_arrow_left</mat-icon>
     </div>
-  </nav>
+    <div>
+      <strong> Setting </strong>
+    </div>
+    <br />
+  </div>
+</nav>
